--- a/dns-management/aws-domain-registration/Dockerfile-aws-dns
+++ b/dns-management/aws-domain-registration/Dockerfile-aws-dns
@@ -1,2 +1,9 @@
 FROM hashicorp/terraform:1.12.2
 
+# Copy entryscript
+COPY aws-terraform-entryscript.sh /aws-terraform-entryscript.sh
+RUN chmod +x /aws-terraform-entryscript.sh
+
+# Set entrypoint
+ENTRYPOINT ["/aws-terraform-entryscript.sh"]
+
