Remove the redundant ENTRYPOINT and added in docker-compose script

--- a/dns-management/aws-domain-registration/Dockerfile-aws-dns
+++ b/dns-management/aws-domain-registration/Dockerfile-aws-dns
@@ -3,7 +3,8 @@ FROM hashicorp/terraform:1.12.2
 
 WORKDIR /aws-terraform
 
-ENTRYPOINT ["/bin/sh", "-c", "terraform init && terraform plan"]
+# Copy Terraform configuration files
+COPY terraform /aws-terraform
 
 # Copy entryscript
 COPY aws-terraform-entryscript.sh /aws-terraform-entryscript.sh
