automate TXT record using terrafom via Docker-compse

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ BASE_DOMAIN="ikedesigns.com"
 TARGET_IP="18.119.11.183"
 
 # Fill in after executing the certbot initialization script
-ACME_CHALLENGE=""
+ACME_CHALLENGE="sjgBKfaMnZSecaKkYkI8Ayx-CvGH8b1IMmTKiTXc_Q"
 
 # Do not change these unless you know what you're doing
 WWW_SUBDOMAIN="www.${BASE_DOMAIN}"
