--- a/dns-management/aws-domain-registration/terraform/terraform.tfvars.template
+++ b/dns-management/aws-domain-registration/terraform/terraform.tfvars.template
@@ -1,6 +1,7 @@
 domain_name    = "${BASE_DOMAIN}"
 target_ip      = "${TARGET_IP}"
 acme_challenge = "${ACME_CHALLENGE}"
+contact_info = "${CONTACT_INFO}"
 
 subdomains = [
   "www",
@@ -8,15 +9,3 @@ subdomains = [
   "komet",
 ]
 
-contact_info = {
-  address_line_1 = "6333 Chatham Glenn way"
-  city           = "Harrisburg"
-  contact_type   = "PERSON"
-  country_code   = "US"
-  email          = "sidahal@deloitte.com"
-  first_name     = "Sikeey"
-  last_name      = "Dahal"
-  phone_number   = "+1.7177436740"
-  state          = "PA"
-  zip_code       = "17111"
-}
