adjusting domain contact information to be set in the .env file

--- a/dns-management/aws-domain-registration/terraform/terraform.tfvars.template
+++ b/dns-management/aws-domain-registration/terraform/terraform.tfvars.template
@@ -13,10 +13,10 @@ contact_info = {
   city           = "Harrisburg"
   contact_type   = "PERSON"
   country_code   = "US"
-  email          = "sidahal@deloitte.com"
-  first_name     = "Sikeey"
-  last_name      = "Dahal"
-  phone_number   = "+1.7177436740"
+  email          = "${ADMIN_EMAIL}"
+  first_name     = "${ADMIN_NAME}"
+  last_name      = "Doe"
+  phone_number   = "${ADMIN_PHONE}"
   state          = "PA"
   zip_code       = "17111"
 }
