--- a/.env
+++ b/.env
@@ -2,6 +2,11 @@
 BASE_DOMAIN="ikedesigns.com"
 TARGET_IP="18.119.11.183"
 
+# Contact information for domain registration
+ADMIN_EMAIL="admin@ikedesigns.com"
+ADMIN_PHONE="+1234567890"
+ADMIN_NAME="John Doe"
+
 # Fill in after executing the certbot initialization script
 ACME_CHALLENGE="sjgBKfaMnZSecaKkYkI8Ayx-CvGH8b1IMmTKiTXc_Q"
 
