--- a/dns-management/aws-domain-registration/terraform/terraform.tfvars.template
+++ b/dns-management/aws-domain-registration/terraform/terraform.tfvars.template
@@ -1,12 +1,14 @@
 domain_name    = "${BASE_DOMAIN}"
 target_ip      = "${TARGET_IP}"
 acme_challenge = "${ACME_CHALLENGE}"
+contact_info = "${CONTACT_INFO}"
 
 subdomains = [
   "www",
   "nexus",
   "komet",
 ]
+
 
 contact_info = {
   address_line_1 = "${ADDRESS_LINE_1}"
