allowing the aws credentials to be set

--- a/.env
+++ b/.env
@@ -2,6 +2,14 @@
 BASE_DOMAIN="ikedesigns.com"
 TARGET_IP="18.119.11.183"
 
+# AWS credentials for Terraform and Docker execution.  If the AWS_ACCESS_KEY_ID and AWS keys and tokens are not
+# set, the script will use the default credentials from the AWS CLI configuration and/or machine's local IAM
+# role permissions.
+AWS_REGION="us-east-1"
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_SESSION_TOKEN=""
+
 # Contact information for domain registration
 ADMIN_EMAIL="admin@ikedesigns.com"
 ADMIN_PHONE="+1234567890"
