--- a/dns-management/aws-domain-registration/terraform/terraform.tfvars.template
+++ b/dns-management/aws-domain-registration/terraform/terraform.tfvars.template
@@ -1,3 +1,5 @@
+
+aws_region     = "${AWS_REGION}"
 domain_name    = "${BASE_DOMAIN}"
 target_ip      = "${TARGET_IP}"
 acme_challenge = "${ACME_CHALLENGE}"
