--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,8 +179,8 @@ services:
     container_name: aws-dns-setup
     volumes:
       - ./.env:/.env
-      - ./dns-management/aws-domain-registration/terraform:/aws-terraform
-      - ./dns-management/aws-domain-registration/aws-terraform-entryscript.sh:/aws-terraform-entryscript.sh
+      - ./dns-management/aws-domain-registration/terraform:/aws-infra
+      - ./dns-management/aws-domain-registration/aws-entryscript.sh:/aws-entryscript.sh
     networks:
       - rapidenv
     restart: "no"
