fixing bug in rename

--- a/dns-management/aws-domain-registration/Dockerfile-aws-dns
+++ b/dns-management/aws-domain-registration/Dockerfile-aws-dns
@@ -4,7 +4,7 @@ FROM scalr/opentofu:1.9.2
 WORKDIR /aws-terraform
 # Install necessary packages  envsubst (provided by the gettext package)
 
-RUN sudo apt-get update && sudo apt-get install -y gettext-base
+RUN apt-get update && sudo apt-get install -y gettext-base
 
 # Copy Terraform configuration files
 COPY ./dns-management/aws-domain-registration/terraform /aws-infra
