sending contact info as part of domain creation

--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ AWS_SESSION_TOKEN=""
 # Contact information for domain registration
 ADMIN_EMAIL="admin@ikedesigns.com"
 ADMIN_PHONE="+1234567890"
+ADMIN_COUNTRY_CODE="US"
 ADMIN_FIRST_NAME="John"
 ADMIN_LAST_NAME="Doe"
 ADMIN_ADDRESS="6333 Chatham Glenn way"
