--- a/dns-management/aws-domain-registration/infra/terraform.tfvars.template
+++ b/dns-management/aws-domain-registration/infra/terraform.tfvars.template
@@ -12,14 +12,14 @@ subdomains = [
 
 
 contact_info = {
-  address_line_1 = "${ADDRESS_LINE_1}"
-  city           = "${CITY}"
+  address_line_1 = "${ADMIN_ADDRESS}"
+  city           = "${ADMIN_CITY}"
   contact_type   = "PERSON"
-  country_code   = "US"
+  country_code   = "${ADMIN_COUNTRY_CODE}"
   email          = "${ADMIN_EMAIL}"
-  first_name     = "${ADMIN_NAME}"
-  last_name      = "${LAST_NAME}"
+  first_name     = "${ADMIN_FIRST_NAME}"
+  last_name      = "${ADMIN_LAST_NAME}"
   phone_number   = "${ADMIN_PHONE}"
-  state          = "${STATE}"
-  zip_code       = "${ZIP_CODE}"
+  state          = "${ADMIN_STATE}"
+  zip_code       = "${ADMIN_ZIP}"
 }
