--- a/.env
+++ b/.env
@@ -5,21 +5,21 @@ TARGET_IP="18.119.11.183"
 # AWS credentials for Terraform and Docker execution.  If the AWS_ACCESS_KEY_ID and AWS keys and tokens are not
 # set, the script will use the default credentials from the AWS CLI configuration and/or machine's local IAM
 # role permissions.
-AWS_REGION="us-east-1"
+AWS_REGION="us-east-1" # valid regions are found at https://docs.aws.amazon.com/general/latest/gr/rande.html
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_SESSION_TOKEN=""
 
 # Contact information for domain registration
 ADMIN_EMAIL="admin@ikedesigns.com"
-ADMIN_PHONE="+1234567890"
-ADMIN_COUNTRY_CODE="US"
+ADMIN_PHONE="+1.2345678" # Must use the format +999.12345678
+ADMIN_COUNTRY_CODE="US" # ISO 3166-1 alpha-2 country code
 ADMIN_FIRST_NAME="John"
 ADMIN_LAST_NAME="Doe"
 ADMIN_ADDRESS="6333 Chatham Glenn way"
 ADMIN_CITY="Harrisburg"
-ADMIN_STATE="PA"
-ADMIN_ZIP="17111"
+ADMIN_STATE="PA" # ISO 3166-2 state code
+ADMIN_ZIP="17111" # Postal Code that matches the Country and State
 
 # Fill in after executing the certbot initialization script
 ACME_CHALLENGE="sjgBKfaMnZSecaKkYkI8Ayx-CvGH8b1IMmTKiTXc_Q"
