--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,13 +97,13 @@ services:
   nginx-subdomain:
     build:
       context: .
-      dockerfile: subdomain/Dockerfile
+      dockerfile: subdomain-based/Dockerfile
     container_name: nginx-subdomain
     ports:
       - "${NGINX_PORT:-80}:80"
       - "${NGINX_PORT:-443}:443"
     volumes:
-      - ./subdomain/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./subdomain-based/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
     depends_on:
