--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,7 +103,7 @@ services:
       - "${NGINX_PORT:-80}:80"
       - "${NGINX_PORT:-443}:443"
     volumes:
-      - ./subdomain-based/nginx.conf.template /etc/nginx/nginx.conf.template:ro
+      - ./subdomain-based/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
     depends_on:
