--- a/path-based/nginx.conf
+++ b/path-based/nginx.conf
@@ -32,47 +32,41 @@ http {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Port 80;
     proxy_buffering off;
     proxy_read_timeout 86400;
 
-    # HTTP server - redirects to HTTPS
     server {
         listen 80;
         server_name localhost;
-
-        # Certbot webroot challenge
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        # Redirect all HTTP requests to HTTPS
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    # HTTPS server
-    server {
-        listen 80 ssl;
-        server_name localhost;
-
-        # Serve index.html page
-        location / {
+          # Serve index.html page
+         location / {
             root /usr/share/nginx/html;
             index index.html;
         }
 
-        # JPro and app paths
+
+         # JPro and app paths
         location ~ ^/(jpro|app)/ {
             proxy_pass http://komet:8080;
         }
 
         # Nexus proxy
-        # Path-based routing for Nexus
+         # Path-based routing for Nexus
         location /nexus/ {
             proxy_pass http://nexus:8081/;
             rewrite ^/nexus/(.*) /$1 break;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /git/ {
+            client_max_body_size 512M;
+            proxy_pass http://gitea:3000/;
+            proxy_set_header Connection $http_connection;
+            proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
