Feature/489 nginx template fix (#20)
Path-based local host related changes.
Revered nginx.conf
docker-compose script changes for path based
HTML changes for localhost

--- a/.env
+++ b/.env
@@ -22,7 +22,9 @@ ADMIN_STATE="PA" # ISO 3166-2 state code
 ADMIN_ZIP="17111" # Postal Code that matches the Country and State
 
 # Fill in after executing the certbot initialization script
-ACME_CHALLENGE="SOzcK9AePiR-eTUiXDRI83-beq5ZSiCmY6RhZlwKlB0"
+
+ACME_CHALLENGE_VALUES='["jeYA6KHtgP2Fke_2rx3BJ8LxD8UrYebhJ2M0aUp7Mvk","yYF1Jc7UD0U_dNZCz3DqCUaYcAoukBNXtuOo6dniX_E"]'
+
 
 # Do not change these unless you know what you're doing
 WWW_SUBDOMAIN="www.${BASE_DOMAIN}"
