--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,20 +65,18 @@ services:
       context: .
       dockerfile: path-based/Dockerfile
     container_name: nginx-path-based
-    environment:
-      - DOMAINS=${NGINX_DOMAINS}
+   
     ports:
       - "${NGINX_PORT:-80}:80"
-      - "${NGINX_PORT:-443}:443"
+    
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./path-based/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-logs:/var/log/nginx
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf:/etc/letsencrypt
+     
     depends_on:
       - nexus
       - komet
-      - certbot
+   
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${NGINX_PORT:-80}/"]
       interval: 30s
@@ -103,6 +101,7 @@ services:
       - "${NGINX_PORT:-80}:80"
       - "${NGINX_PORT:-443}:443"
     volumes:
+      - ./.env:/.env
       - ./subdomain-based/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
