--- a/subdomain-based/nginx.conf.template
+++ b/subdomain-based/nginx.conf.template
@@ -34,10 +34,10 @@ http {
     # --- HTTPS for www subdomain ---
     server {
         listen 443 ssl;
-        server_name ${WWW_SUBDOMAIN};
+        server_name ${WWW_SUBDOMAIN} ${BASE_DOMAIN};
 
-        ssl_certificate     /etc/letsencrypt/live/${WWW_SUBDOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${WWW_SUBDOMAIN}/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/live/${BASE_DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${BASE_DOMAIN}/privkey.pem;
 
         error_page 497 https://$host$request_uri;
 
@@ -62,10 +62,10 @@ http {
     # --- HTTPS for nexus subdomain ---
     server {
         listen 443 ssl;
-        server_name ${NEXUS_SUBDOMAIN};
+        server_name ${NEXUS_SUBDOMAIN} ${BASE_DOMAIN};
 
-        ssl_certificate     /etc/letsencrypt/live/${NEXUS_SUBDOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${NEXUS_SUBDOMAIN}/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/live/${BASE_DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${BASE_DOMAIN}/privkey.pem;
 
         error_page 497 https://$host$request_uri;
 
@@ -90,10 +90,10 @@ http {
     # --- HTTPS for komet subdomain ---
     server {
         listen 443 ssl;
-        server_name ${KOMET_SUBDOMAIN};
+        server_name ${KOMET_SUBDOMAIN} ${BASE_DOMAIN};
 
-        ssl_certificate     /etc/letsencrypt/live/${KOMET_SUBDOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${KOMET_SUBDOMAIN}/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/live/${BASE_DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${BASE_DOMAIN}/privkey.pem;
 
         error_page 497 https://$host$request_uri;
 
