--- a/path-based/nginx.conf
+++ b/path-based/nginx.conf
@@ -74,6 +74,15 @@ http {
             proxy_read_timeout 86400;
             proxy_http_version 1.1;
         }
+        # Static site website
+
+        location /ikmdev-site/ {
+            proxy_pass http://ikmdev-site:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 
 
