--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,7 @@ certbot/
 # Ignore generated Terraform files
 
 dns-management/aws-domain-registration/infra/terraform.tfvars
+
+###################
+# Ignore huge datset for JPRO stuff 
+komet-data/
