--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,7 @@ services:
     image: ikebox/komet:0.0.1
     container_name: komet
     volumes:
-      - /C/Solor:/root/Solor
-      - ./komet-data/users.ini:/root/Solor/users.ini:ro
+      - ./komet-data/:/root/Solor  
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8080/status/alive || wget --spider -q http://localhost:8080/status/alive || exit 1"]
       interval: 30s
