--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ ADMIN_ZIP="17111" # Postal Code that matches the Country and State
 
 # Fill in after executing the certbot initialization script
 
-ACME_CHALLENGE='["KrFtuJKEMtB0eQ1gRM3JlVkYnbqqyniUk-wbXvpSXRA",""3gRRE7gLcjyu44Fz0uaG0LQyb3TVNa375nz0Bz9h2I8"]'
+ACME_CHALLENGE='["KrFtuJKEMtB0eQ1gRM3JlVkYnbqqyniUk-wbXvpSXRA","3gRRE7gLcjyu44Fz0uaG0LQyb3TVNa375nz0Bz9h2I8"]'
 
 
 # Do not change these unless you know what you're doing
