qutoes removed in tempt

--- a/dns-management/aws-domain-registration/infra/terraform.tfvars.template
+++ b/dns-management/aws-domain-registration/infra/terraform.tfvars.template
@@ -2,7 +2,7 @@
 aws_region     = "${AWS_REGION}"
 domain_name    = "${BASE_DOMAIN}"
 target_ip      = "${TARGET_IP}"
-acme_challenge = "${ACME_CHALLENGE}"
+acme_challenge = ${ACME_CHALLENGE}
 
 subdomains = [
   "www",
