--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Domain configuration
 BASE_DOMAIN="ikedesigns.com"
-TARGET_IP="18.119.11.183"
+TARGET_IP="172.20.20.13"
 
 # AWS credentials for Terraform and Docker execution.  If the AWS_ACCESS_KEY_ID and AWS keys and tokens are not
 # set, the script will use the default credentials from the AWS CLI configuration and/or machine's local IAM
@@ -11,7 +11,7 @@ AWS_SECRET_ACCESS_KEY=""
 AWS_SESSION_TOKEN=""
 
 # Contact information for domain registration
-ADMIN_EMAIL="admin@ikedesigns.com"
+ADMIN_EMAIL="sidahal@deloitte.com"
 ADMIN_PHONE="+1.1234567890" # Must use the format +999.12345678
 ADMIN_COUNTRY_CODE="US" # ISO 3166-1 alpha-2 country code
 ADMIN_FIRST_NAME="John"
@@ -23,7 +23,7 @@ ADMIN_ZIP="17111" # Postal Code that matches the Country and State
 
 # Fill in after executing the certbot initialization script
 
-ACME_CHALLENGE_VALUES='["jeYA6KHtgP2Fke_2rx3BJ8LxD8UrYebhJ2M0aUp7Mvk","yYF1Jc7UD0U_dNZCz3DqCUaYcAoukBNXtuOo6dniX_E"]'
+ACME_CHALLENGE='"3Kg9AYErfQ7LjNVdwLpRpNn9BH1C6bY4O1MQh-GHi0Y","cxM5FsHxJeVaSj4Mnf5OrPbaMshZRrHhyP7YYSqeml4"'
 
 
 # Do not change these unless you know what you're doing
