dockerfile subdomain-based updated

--- a/subdomain-based/Dockerfile
+++ b/subdomain-based/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:1.26.3
 
 # Install OpenSSL for certificate generation and envsubst for template processing
-RUN apt-get update && apt-get install -y openssl gettext-base && rm -rf /var/lib/apt/lists/*
+# RUN apt-get update && apt-get install -y openssl gettext-base && rm -rf /var/lib/apt/lists/*
 
 # Copy files
 COPY .env /.env
