readme updated and healthcheck url

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,7 +110,7 @@ services:
       - ikmdev-site
       - certbot
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://${WWW_SUBDOMAIN}"]
+      test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 30s
       timeout: 10s
       retries: 3
