revereted cont,domain.txt

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Domain configuration
-BASE_DOMAIN="tinkar.org"
-TARGET_IP="208.100.134.142"
+BASE_DOMAIN="ikedesigns.com"
+TARGET_IP="18.209.157.241"
 
 # AWS credentials for Terraform and Docker execution.  If the AWS_ACCESS_KEY_ID and AWS keys and tokens are not
 # set, the script will use the default credentials from the AWS CLI configuration and/or machine's local IAM
@@ -11,24 +11,23 @@ AWS_SECRET_ACCESS_KEY=""
 AWS_SESSION_TOKEN=""
 
 # Contact information for domain registration
-ADMIN_EMAIL="75staves.exhaust@icloud.com"
-ADMIN_PHONE="+1.5416785063" # Must use the format +999.12345678
+ADMIN_EMAIL="sidahal@deloitte.com"
+ADMIN_PHONE="+1.1234567890" # Must use the format +999.12345678
 ADMIN_COUNTRY_CODE="US" # ISO 3166-1 alpha-2 country code
-ADMIN_FIRST_NAME="Keith"
-ADMIN_LAST_NAME="Campbell"
-ADMIN_ADDRESS="62626 Sparrow Hawk Circle"
-ADMIN_CITY="Bend"
-ADMIN_STATE="OR" # ISO 3166-2 state code
-ADMIN_ZIP="97703" # Postal Code that matches the Country and State
+ADMIN_FIRST_NAME="John"
+ADMIN_LAST_NAME="Doe"
+ADMIN_ADDRESS="6333 Chatham Glenn way"
+ADMIN_CITY="Harrisburg"
+ADMIN_STATE="PA" # ISO 3166-2 state code
+ADMIN_ZIP="17111" # Postal Code that matches the Country and State
 
 # Fill in after executing the certbot initialization script
 
-ACME_CHALLENGE='"Qtppo2H6_p3A4L5WCSiZzH5LNuIte6qWuDfncsYQk2E","FV1u9u5dkabMurqHzIijMe_qye4PIEvX7z0PCvaQdKA"'
+ACME_CHALLENGE='"H8ejNuEyo_kW13JTW-VVxcIg4tWWKjnilkV2FIGueeg","13mbXZ8uD8HjCBEj1FTv23Qr1lLn-H8nr4Ze0xSDPrA"'
 
 
 # Do not change these unless you know what you're doing
 WWW_SUBDOMAIN="www.${BASE_DOMAIN}"
 NEXUS_SUBDOMAIN="nexus.${BASE_DOMAIN}"
 KOMET_SUBDOMAIN="komet.${BASE_DOMAIN}"
-
 
