--- a/dns-management/easy-dns-domain-registration/Dockerfile-easydns
+++ b/dns-management/easy-dns-domain-registration/Dockerfile-easydns
@@ -7,6 +7,7 @@ ENV ADMIN_PHONE="+999.12345678"
 
 # Install dependencies
 RUN pip install --no-cache-dir requests
+RUN pip install python-dotenv
 
 # Copy scripts and configuration files
 COPY ../dns-management/easy-dns-domain-registration/. .
