--- a/.env
+++ b/.env
@@ -11,15 +11,15 @@ AWS_SECRET_ACCESS_KEY=""
 AWS_SESSION_TOKEN=""
 
 # Contact information for domain registration
-ADMIN_EMAIL="sidahal@deloitte.com"
+ADMIN_EMAIL="swampizzo@based.com"
 ADMIN_PHONE="+1.1234567890" # Must use the format +999.12345678
 ADMIN_COUNTRY_CODE="US" # ISO 3166-1 alpha-2 country code
 ADMIN_FIRST_NAME="John"
 ADMIN_LAST_NAME="Doe"
-ADMIN_ADDRESS="6333 Chatham Glenn way"
-ADMIN_CITY="Harrisburg"
-ADMIN_STATE="PA" # ISO 3166-2 state code
-ADMIN_ZIP="17111" # Postal Code that matches the Country and State
+ADMIN_ADDRESS="5555 BASED STREET"
+ADMIN_CITY="BASEDGOD"
+ADMIN_STATE="GA" # ISO 3166-2 state code
+ADMIN_ZIP="55555" # Postal Code that matches the Country and State
 
 # Fill in after executing the certbot initialization script
 
