--- a/.github/workflows/docker-komet-version-listener.yml
+++ b/.github/workflows/docker-komet-version-listener.yml
@@ -20,7 +20,7 @@ jobs:
           echo " new version of komet received: ${{ github.event.client_payLoad.version }}"
 
           sed -i '/^$/s// #BLANK_LINE_PLACEHOLDER/' docker-compose.yml
-          yq e -i '.services.komet.image = "${{github.event.client_payload.version}}"' docker-compose.yml
+          yq e -i '.services.komet.image = "ikebox/komet:${{github.event.client_payload.version}}"' docker-compose.yml
           sed -i 's/ *#BLANK_LINE_PLACEHOLDER//g' docker-compose.yml
           
       - name: Commit and push changes
